@@ -4,3 +4,4 @@
 /oldlib/
 /nbproject/private/
 /build/
+/lib/mssql-jdbc-7.0.0.jre8.jar
