@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jt400.jar=lib/jt400.jar
+file.reference.mssql-jdbc-7.0.0.jre8.jar=lib/mssql-jdbc-7.0.0.jre8.jar
 file.reference.pigiron.jar=lib/pigiron.jar
 file.reference.postgresql-42.2.5.jre7.jar=lib/postgresql-42.2.5.jre7.jar
 file.reference.sblim-cim-client2-HEAD.jar=lib/sblim-cim-client2-HEAD.jar
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.pigiron.jar}:\
     ${file.reference.tn5250j.jar}:\
     ${file.reference.sblim-cim-client2-HEAD.jar}:\
-    ${file.reference.postgresql-42.2.5.jre7.jar}
+    ${file.reference.postgresql-42.2.5.jre7.jar}:\
+    ${file.reference.mssql-jdbc-7.0.0.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
@@ -73,6 +75,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
 javadoc.reference.jt400.jar=/usr/local/src/JTOpen/dist/doc.zip
+javadoc.reference.mssql-jdbc-7.0.0.jre8.jar=https://javadoc.io/doc/com.microsoft.sqlserver/mssql-jdbc/7.1.2.jre11-preview
 javadoc.reference.pigiron.jar=../../../PigIron/Checkout/pigiron/dist/javadoc
 javadoc.reference.postgresql-42.2.5.jre7.jar=/usr/local/doc/PostgreSQL
 javadoc.reference.sblim-cim-client2-HEAD.jar=../../../sblim/Checkout/jsr48-client/build/doc
