@@ -1,3 +1,57 @@
+2018-11-11
+
+Ublu now by default compiles in Microsoft MSSQL [TM] support.
+
+The MSSQL JDBC driver is not included in the distribution. As of this writing,
+the download url is:
+
+    https://docs.microsoft.com/en-us/sql/connect/jdbc/download-microsoft-jdbc-driver-for-sql-server?view=sql-server-2017
+
+Ublu did not use to compile in MSSQL support by default. The instructions below
+starting at ADDING IN MSSQL SUPPORT describe how to add that support in. You
+do not have to do this now, but if you want to use MSSQL support, you must
+download the driver on your own and put it in the lib directory under 
+directory where ublu.jar is located.
+
+This means:
+    1. As built and distributed, if you have downloaded on your own the MSSQL
+       JDBC driver, the db command will work for -dbtype mssql.
+    2. As built and distributed, if you have *not* downloaded on your own the MSSQL
+       JDBC driver, the db command will fail for -dbtype mssql.
+    3. To build Ublu from soure, you must either:
+        a. Comment out MSSQL support
+
+Therefor you may wish to execute the REMOVING MSSQL SUPPORT instructions in order
+to remove MSSQL support if you do not want to download the driver.
+
+REMOVING MSSQL SUPPORT
+
+1. Use NetBeans project properties to remove the jar from the libraries sourced
+	by the build. Alternatively, you can remove it to nbproject/project.properties
+	at the end of the classpath property:
+
+javac.classpath=\
+    ${file.reference.jt400.jar}:\
+    ${file.reference.pigiron.jar}:\
+    ${file.reference.tn5250j.jar}:\
+    ${file.reference.sblim-cim-client2-HEAD.jar}:\
+    ${file.reference.postgresql-42.2.5.jre7.jar}:\
+    ${file.reference.mssql-jdbc-7.0.0.jre8.jar} # <<< REMOVE
+
+    Also remove the line:
+
+file.reference.mssql-jdbc-7.0.0.jre8.jar=lib/mssql-jdbc-7.0.0.jre8.jar
+
+2. Remove the file DbMSSQL.java from the directory src/ublu/db
+
+3. Edit src/ublu/command/CmdDb.java and comment out the lines between each
+   "/* Uncomment the following if you are adding MSSQL support */" and
+   "/* End Uncomment */"
+
+4. Build and run.
+
+( Old instructions for adding in MSSQL Support )
+ADDING IN MSSQL SUPPORT
 Ublu as compiled and set up in the source tree supports IBM i database and
 PostgreSQL database.
 
@@ -9,20 +63,21 @@ If you want MSSQL support:
 
 	1. Download the MSSQL JDBC driver from Microsoft Developer Network. As of
 	this writing, the url is:
-	https://www.microsoft.com/en-us/download/details.aspx?displaylang=en&id=11774
+	https://docs.microsoft.com/en-us/sql/connect/jdbc/download-microsoft-jdbc-driver-for-sql-server?view=sql-server-2017
 
-	2. Copy the jdbc driver jar, e.g., sqljdbc42.jar to Ublu's lib directory.
+	2. Copy the jdbc driver jar, e.g., mssql-jdbc-7.0.0.jre8.jar to Ublu's lib directory.
 
-	3. Use NetBeans project properties to add the the jar to the libraries sourced
+	3. Use NetBeans project properties to add the jar to the libraries sourced
 	by the build. Alternatively, you can add it to nbproject/project.properties
 	at the end of the classpath property:
-		javac.classpath=\
-		${file.reference.jt400.jar}:\
-		${file.reference.postgresql-9.4.1208.jre6.jar}:\
-		${file.reference.jtopenlite.jar}:\
-		${file.reference.pigiron.jar}:\
-		${file.reference.tn5250j.jar}:\
-		${file.reference.sqljdbc42.jar} # <<<
+
+javac.classpath=\
+    ${file.reference.jt400.jar}:\
+    ${file.reference.pigiron.jar}:\
+    ${file.reference.tn5250j.jar}:\
+    ${file.reference.sblim-cim-client2-HEAD.jar}:\
+    ${file.reference.postgresql-42.2.5.jre7.jar}:\
+    ${file.reference.mssql-jdbc-7.0.0.jre8.jar} # <<< ADD
 		
 	** NOTE that if you choose to download and use Microsoft's MSSQL JDBC driver
 	in Ublu, then any and all licensing requirements are Your Responsiblity. **
